# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1326 2013/07/30 07:03:31 zmedico Exp $

*portage-2.2.0_alpha191 (30 Jul 2013)

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha191.ebuild:
  2.2.0_alpha191 version bump. This includes all of the fixes in 2.1.13.2. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild:
  Tweak repos.conf logic for bug #478726.

*portage-2.1.13.2 (30 Jul 2013)

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.2.ebuild:
  2.1.13.2 version bump. This fixes bug #477728 (export GPG_TTY for git
  signatures with repoman), bug #478188 (fix || dep handling to pull in vala
  updates correctly), bug #478544 (fix duplicate repo name warning involving
  /usr/portage), and bug #478726 (skip /etc/portage/repos.conf generation if the
  file exists). Bug #472632 tracks all bugs fixed since portage-2.1.12.2.

  29 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.1.ebuild,
  portage-2.2.0_alpha190.ebuild:
  Adjust DISTDIR permissions last in pkg_postinst, in case the user is tempted
  to kill it. Also remove obsolete WORLD_MIGRATION_UPGRADE code.

  28 Jul 2013; Michał Górny <mgorny@gentoo.org> portage-2.1.11.62.ebuild,
  portage-2.1.12.13.ebuild, portage-2.1.12.2.ebuild, portage-2.1.13.1.ebuild,
  portage-2.2.0_alpha177.ebuild, portage-2.2.0_alpha188.ebuild,
  portage-2.2.0_alpha190.ebuild, portage-9999.ebuild:
  Use virtual/pypy for PyPy dep.

*portage-2.2.0_alpha190 (26 Jul 2013)

  26 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha190.ebuild,
  -portage-2.2.0_alpha189.ebuild:
  2.2.0_alpha190 version bump. This includes all of the fixes in 2.1.13.1. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.1 (26 Jul 2013)
